--- a/about.html
+++ b/about.html
@@ -74,7 +74,14 @@
             ‘The Institution of Engineers (India)’, see to it that we provide enriched technical experience and also
             help students in areas pertaining to academia.
         </p>
-
+        <div style="margin-left: 50px; ">Chill Zone</div>
+        <div style="padding-left: 40px; padding-top: 30px;"><audio controls>
+                <source src="White Rabbit Song.m4a" type="audio/mp4">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="padding-left: 30px; padding-top: 30px;"><a href="https://www.youtube.com/watch?v=WANNqr-vcx0"><img
+                    src="matrix.gif" alt="" width="30%" height="30%"></a></div>
     </section>
 
 
