--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <section>
 
 
-        <p class="para animate__animated animate__fadeIn">
+        <p class="para animate__animated animate__fadeIn" style="margin-bottom: 30px;">
             <a href='https://www.instagram.com/ieenc_manipal/' target="_blank"><img src="e&c.jfif" alt="logo" class="rounded-circle mb-3" style="height:70px; width:70px;"></a><br>
             IE-E&C is the official Students' Chapter of Electronics and Communication which goes beyond the theories
             into practical applications. We aspire to enhance the technical understanding of every individual who’s
