--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                 Your browser does not support the audio element.
             </audio>
         </div>
-        <div class="animate__animated animate__fadeIn" style="padding-left: 30px; padding-top: 30px;"><a href="https://www.youtube.com/watch?v=WANNqr-vcx0"><img
+        <div class="animate__animated animate__fadeIn" style="padding-left: 30px; padding-top: 30px;"><a href="https://www.youtube.com/watch?v=WANNqr-vcx0" target="_blank"><img
                     src="matrix.gif" alt="" width="30%" height="30%"></a></div>
     </section>
 
